package exercise1;

public class Employee {
	public int computeSalary() {
		return 0;
	}

	public void sell() { }

	public void workOneHour() { }

	public String getName() {
		return null;
	}
}
