package exercise2;

public interface Payable {
	int computeSalary();
}
