package exercise2;

public class ProductionWorker {
	public void produceOnePiece() {

	}

	public int computeSalary() {
		return 0;
	}
}
